--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,6 @@ on: [push]
 
 env:
   APP_NAME: volwatcher
-  DEBIAN_PACKAGE_NAME: volwatcher-1.0.${{github.run_number}}_armhf
   APP_VERSION: 1.0.${{github.run_number}}
   RELEASE_VERSION: v1.0.${{github.run_number}}
   PACKAGE_PATH: github.com/danesparza/volwatcher
@@ -67,7 +66,7 @@ jobs:
         run: go mod download
 
       - name: Create binaries for all platforms
-        run: mkdir -p /tmp/binaries; gox -osarch="darwin/amd64 darwin/arm64" -ldflags "-X ${PACKAGE_PATH}/version.BuildNumber=${GITHUB_RUN_NUMBER} -X ${PACKAGE_PATH}/version.CommitID=${GITHUB_SHA} -X '${PACKAGE_PATH}/version.Prerelease=-'" -output "/tmp/binaries/${APP_NAME}_{{.OS}}_{{.Arch}}" $PACKAGE_PATH/...
+        run: mkdir -p /tmp/binaries; gox -osarch="darwin/arm64" -output "/tmp/binaries/${APP_NAME}_{{.OS}}_{{.Arch}}" $PACKAGE_PATH/...
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
