--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -66,7 +66,7 @@ jobs:
         run: go mod download
 
       - name: Create binaries for all platforms
-        run: mkdir -p /tmp/binaries; gox -osarch="darwin/arm64" -output "/tmp/binaries/${APP_NAME}_{{.OS}}_{{.Arch}}" $PACKAGE_PATH/...
+        run: mkdir -p /tmp/binaries; gox -osarch="darwin/arm64" -output "/tmp/binaries/${APP_NAME}_{{.OS}}_{{.Arch}}" ./...
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
